--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <form class="setup-wizard-form"
         method="post"
         enctype="multipart/form-data"
+        action="https://js.dump.academy/code-and-magick"
         autocomplete="off">
 
     <div class="setup-title">
@@ -80,9 +81,9 @@
           <input type="file" name="avatar">
         </div>
         <label>
-          <input type="text" name="username"
+          <input type="text" name="username" minlength = "2"
                  maxlength="25" required
-                 class="setup-user-name" value="Синий Пендальф"/>
+                 class="setup-user-name" value="Синий Пендальф" required/>
         </label>
       </div>
 
