--- a/index.html
+++ b/index.html
@@ -202,9 +202,14 @@
     return height / 3 - getWizardHeight(wizardWidth);
   };
 </script>
+<script src="js/util.js"></script>
+<script src="js/elements.js"></script>
 <script src="js/stat.js"></script>
+<script src="js/setup-similar.js"></script>
 <script src="js/setup.js"></script>
-<script src="js/dialog.js"></script>
+<script src="js/dialog-open.js"></script>
+<script src="js/dialog-move.js"></script>
+<script src="js/validation.js"></script>
 <script src="js/game.js"></script>
 
 </body>
