Вынесла функцию, которая меняет цвет частей волшебника в отдельный модуль

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
 </script>
 <script src="js/util.js"></script>
 <script src="js/elements.js"></script>
+<script src="js/change-color.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/setup-similar.js"></script>
 <script src="js/setup.js"></script>
