Реализовала загрузку с сервера данных для отрисовки похожих волшебников

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
 <script src="js/elements.js"></script>
 <script src="js/change-color.js"></script>
 <script src="js/stat.js"></script>
+<script src ="js/backend.js"></script>
 <script src="js/setup-similar.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog-open.js"></script>
