--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <script src="js/setup.js"></script>
 <script src="js/dialog-open.js"></script>
 <script src="js/dialog-move.js"></script>
-<script src="js/validation.js"></script>
+<script src="js/form.js"></script>
 <script src="js/game.js"></script>
 
 </body>
