--- a/index.html
+++ b/index.html
@@ -207,8 +207,10 @@
 <script src="js/change-color.js"></script>
 <script src="js/stat.js"></script>
 <script src ="js/backend.js"></script>
+<script src="js/render-similar.js"></script>
+<script src="js/setup-wizard.js"></script>
+<script src="js/debounce.js"></script>
 <script src="js/setup-similar.js"></script>
-<script src="js/setup.js"></script>
 <script src="js/dialog-open.js"></script>
 <script src="js/dialog-move.js"></script>
 <script src="js/form.js"></script>
