--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="setup-user">
         <div class="upload">
           <img class="setup-user-pic" src="./img/user-1.jpg"/>
-          <input type="file" name="avatar">
+          <input id="avatar" type="file" name="avatar">
         </div>
         <label>
           <input type="text" name="username" minlength = "2"
@@ -168,6 +168,11 @@
 
 <template id="similar-wizard-template" style="display: none">
   <div class="setup-similar-item">
+    <div class="setup-similar-pupup hidden">
+      <h5 class="setup-similar-artifacts-title">Доступные артефакты:</h5>
+      <p class="setup-similar-inventory">
+      </p>
+    </div>
     <div class="setup-similar-content">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-similar-wizard">
         <g class="wizard">
@@ -208,7 +213,8 @@
 <script src="js/stat.js"></script>
 <script src ="js/backend.js"></script>
 <script src="js/render-similar.js"></script>
-<script src="js/setup-wizard.js"></script>
+<script src="js/setup.js"></script>
+<script src="js/avatar.js"></script>
 <script src="js/debounce.js"></script>
 <script src="js/setup-similar.js"></script>
 <script src="js/dialog-open.js"></script>
