--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <script src="js/stat.js"></script>
 <script src ="js/backend.js"></script>
 <script src="js/render-similar.js"></script>
-<script src="js/setup.js"></script>
+<script src="js/wizard.js"></script>
 <script src="js/avatar.js"></script>
 <script src="js/debounce.js"></script>
 <script src="js/setup-similar.js"></script>
